--- a/works.html
+++ b/works.html
@@ -51,10 +51,17 @@
   </div>
   <div class="page-wrapper">
     <div class="work-thumbnail">
-  <img src="/works/roam_4.jpg" alt="Roam" />
+  <img src="/works/roam_thumbnail.jpg" alt="Roam" />
   <a href="/works/roam.html" target="_self">
     <div class="overlay">
       <div class="text">Roam<br/>2018</div>
+    </div>
+  </a>
+</div>    <div class="work-thumbnail">
+  <img src="/works/L+_thumbnail.jpg" alt="L+" />
+  <a href="/works/L+.html" target="_self">
+    <div class="overlay">
+      <div class="text">L+<br/>2018</div>
     </div>
   </a>
 </div><div class="work-thumbnail">
@@ -185,7 +192,7 @@
       </a>
     </div><div class="work-thumbnail">
       <img src="/works/image_thumbnail.jpg" alt="Photo Works" />
-      <a href="https://sakemin.imgur.com/" target="_blank">
+      <a href="https://imgur.com/a/FzDzS" target="_blank">
         <div class="overlay">
           <div class="text">Photo Works<br/>2017~</div>
         </div>
