png nono jpg yes

--- a/works.html
+++ b/works.html
@@ -51,14 +51,14 @@
   </div>
   <div class="page-wrapper">
     <div class="work-thumbnail">
-  <img src="/works/roam_thumbnail.jpg" alt="Roam" />
+  <img src="/works/roam_thumbnail.png" alt="Roam" />
   <a href="/works/roam.html" target="_self">
     <div class="overlay">
       <div class="text">Roam<br/>2018</div>
     </div>
   </a>
 </div><div class="work-thumbnail">
-  <img src="/works/L+_thumbnail.jpg" alt="L+" />
+  <img src="/works/L+_thumbnail.png" alt="L+" />
   <a href="/works/L+.html" target="_self">
     <div class="overlay">
       <div class="text">L+<br/>2018</div>
