jpg nono png yes

--- a/works/roam.html
+++ b/works/roam.html
@@ -53,11 +53,11 @@
     <h2>Web Based Interactive Media Art</h2>
     <h3>HTML 5, JavaScript, P5.js</h3>
   <br/>
-      <img src="roam_1.jpg" style="width:100%;"/>
-      <img src="roam_2.jpg" style="width:100%;"/>
-      <img src="roam_3.jpg" style="width:100%;"/>
-      <img src="roam_4.jpg" style="width:100%;"/>
-      <img src="roam_5.jpg" style="width:100%;"/>
+      <img src="roam_1.png" style="width:100%;"/>
+      <img src="roam_2.png" style="width:100%;"/>
+      <img src="roam_3.png" style="width:100%;"/>
+      <img src="roam_4.png" style="width:100%;"/>
+      <img src="roam_5.png" style="width:100%;"/>
       <h2>Try it here : <a href="http://roam.sakem.in">http://roam.sakem.in</a></h2>
     <div lang="ko" id="description"><br/>
       &nbsp;&nbsp;Roam is a web-based interactive media art. You'll be a quadrangle-combined being and roam around the screen with the breath of sounds. <br/><br/>
