--- a/works/L+.html
+++ b/works/L+.html
@@ -58,7 +58,7 @@
       <img src="L+_4.jpg" style="width:100%;"/>
       <h3>Staffs</h3>
       <h3>Director : Jeonghoe Koo</h3>
-      <h3>Producer : Korea National University of Arts</h3>
+      <h3>Production : Korea National University of Arts</h3>
       <h3>Filming : Jaewoo Lee</h3>-
       <h3>Art Director : Kyeongeun Kim</h3>
       <h3>Art Team : Jongmin Jung</h3>
@@ -71,7 +71,7 @@
       <h3>Man : Taewan Kim</h3>
       <br/>
     <div lang="ko" id="description"><br/>
-      
+
     </div>
   </div>
 
