--- a/works/L+.html
+++ b/works/L+.html
@@ -71,7 +71,7 @@
       <h3>Man : Taewan Kim</h3>
       <br/>
     <div lang="ko" id="description"><br/>
-
+로그라인 : 반복되는 일상에 지쳐있는 혜영은 정환이 왜 멸망을 기다리는지 깨닫게 된다.
     </div>
   </div>
 
