--- a/index.html
+++ b/index.html
@@ -16,31 +16,32 @@
 <body>
     <nav class="abs-nav"><!--navigation bar, always top(fixed)-->
       <br />
-      <ul class="tab-wrapper"><!--3 tabs in it-->
-        <li class="tab">
-          <a href="about.html" target="_self" id="about">
-          about
-          </a>
-        </li>
-        <li class="tab">
-          <a href="works.html" target="_self" id="works">
-          works
-          </a>
-        </li>
-        <li class="tab">
-          <a href="contact.html" target="_self" id="contact">
-          contact
-          </a>
-        </li>
-        <div id="iconbar"><!--4 icons to sns-->
-          <a href="http://www.facebook.com/uhheung" target="_blank"><img src="facebook.png" alt="facebook" id="facebook" class="icon"/></a>
-          <a href="https://www.instagram.com/sake_min/" target="_blank"><img src="instagram.png" alt="instagram" id="instagram" class="icon"/></a>
-          <a href="https://soundcloud.com/sakemin" target="_blank"><img src="soundcloud.png" alt="soundcloud" id="soundcloud" class="icon"/></a>
-          <a href="https://sakemin.imgur.com/" target="_blank"><img src="imgur.png" alt="imgur" id="imgur" class="icon"/></a>
-        </div>
-      </ul>
+
 
       <div class="maincenter">
+        <ul class="tab-wrapper" style="font-size: 0.5em;"><!--3 tabs in it-->
+          <li class="tab">
+            <a href="about.html" target="_self" id="about">
+            about
+            </a>
+          </li>
+          <li class="tab">
+            <a href="works.html" target="_self" id="works">
+            works
+            </a>
+          </li>
+          <li class="tab">
+            <a href="contact.html" target="_self" id="contact">
+            contact
+            </a>
+          </li>
+          <div id="iconbar" style="top: 2em;"><!--4 icons to sns-->
+            <a href="http://www.facebook.com/uhheung" target="_blank"><img src="facebook.png" alt="facebook" id="facebook" class="icon"/></a>
+            <a href="https://www.instagram.com/sake_min/" target="_blank"><img src="instagram.png" alt="instagram" id="instagram" class="icon"/></a>
+            <a href="https://soundcloud.com/sakemin" target="_blank"><img src="soundcloud.png" alt="soundcloud" id="soundcloud" class="icon"/></a>
+            <a href="https://sakemin.imgur.com/" target="_blank"><img src="imgur.png" alt="imgur" id="imgur" class="icon"/></a>
+          </div>
+        </ul>
         <p>
           This is the page <a href="https://sakemin.github.io/pokesketch" target="_blank" id="topokemon">o</a>f <!--if you click 'o', it opens pokemon html-->
         </p>
