--- a/works.html
+++ b/works.html
@@ -51,6 +51,13 @@
   </div>
   <div class="page-wrapper">
     <div class="work-thumbnail">
+  <img src="/works/sober_0.png" alt="Sober" />
+  <a href="/works/sober.html" target="_self">
+    <div class="overlay">
+      <div class="text">Sober<br/>2019</div>
+    </div>
+  </a>
+</div><div class="work-thumbnail">
   <img src="/works/order_thumbnail.png" alt="The Order" />
   <a href="/works/order.html" target="_self">
     <div class="overlay">
