--- a/works.html
+++ b/works.html
@@ -121,13 +121,6 @@
         </div>
       </a>
     </div><div class="work-thumbnail">
-      <img src="/works/modernist_thumbnail.jpg" alt="The Days of Modernist Uhheung" />
-      <a href="/works/modernist.html" target="_self">
-        <div class="overlay">
-          <div class="text">The Days of Modernist Uhheung<br/>2016</div>
-        </div>
-      </a>
-    </div><div class="work-thumbnail">
       <img src="/works/conti_thumbnail.jpg" alt="Conti" />
       <a href="/works/conti.html" target="_self">
         <div class="overlay">
@@ -183,6 +176,14 @@
           <div class="text">Pormoku<br/>2016</div>
         </div>
       </a>
+    </div>
+    <!-- <div class="work-thumbnail">
+      <img src="/works/modernist_thumbnail.jpg" alt="The Days of Modernist Uhheung" />
+      <a href="/works/modernist.html" target="_self">
+        <div class="overlay">
+          <div class="text">The Days of Modernist Uhheung<br/>2016</div>
+        </div>
+      </a>
     </div><div class="work-thumbnail">
       <img src="/works/gamja_thumbnail.jpg" alt="Feeling Potatoes" />
       <a href="/works/potato.html" target="_self">
@@ -211,7 +212,7 @@
           <div class="text">Photo Works<br/>2017~</div>
         </div>
       </a>
-    </div>
+    </div> -->
   </div>
   <div id="mainfooter">
     <br/>
