--- a/works/sober.html
+++ b/works/sober.html
@@ -48,7 +48,7 @@
   </div>
 
   <div class="page-wrapper">
-    <h1>Sober</h1>
+    <h1>Sober(취하지 않음)</h1>
     <h2>2019</h2>
     <h2>Theatre</h2>
       <img src="sober_0.png" style="width:100%;"/><br/><br/>
@@ -57,17 +57,14 @@
       <img src="sober_3.jpg" style="width:100%;"/><br/><br/>
       <img src="sober_4.jpg" style="width:100%;"/><br/><br/>
       <img src="sober_5.jpg" style="width:100%;"/>
-      <h3>Staffs</h3>
-      <h3>Director/Scriptwriter : Yujin Shin</h3>
-      <h3>Producer : Jongmin Jung</h3>
-      <h3>Assistant Director : Yunha Hwang</h3>-
-      <h3>Art Director : Hayoung Bae</h3>
+      <h3>제작진</h3>
+      <h3>신유진 (작/연출) 정종민 (기획) 배하영 (소품/조명/무대) 황윤하 (조연출)</h3>
       <br/>
-      <h3>Actors</h3>
+      <h3>배우진</h3>
       <h3>이선, 지은진, 조혜진, 박새미, 손상준, 전우성, 송형섭</h3>
       <br/>
     <div lang="ko" id="description"><br/>
-The alley in front of the after party bar after the performance of a college play. Members who have escaped the after party on the pretext of smoking start to complain with each other. However...!
+한 대학 극회 공연 후 쫑파티 술집 앞 골목. 술자리에서 담배를 핑계로 빠져나온 회원들은 각자의 불평을 토로합니다. 하지만...!
     </div>
   </div>
 
