--- a/works.html
+++ b/works.html
@@ -50,6 +50,48 @@
 
   </div>
   <div class="page-wrapper">
+      <div class="work-thumbnail">
+  <img src="/works/5dra_thumbnail.png" alt="5D라 Radio" />
+  <a href="/works/5dra.html" target="_self">
+    <div class="overlay">
+      <div class="text">5D라 Radio VOL.1<br/>2022</div>
+    </div>
+  </a>
+      <div class="work-thumbnail">
+  <img src="/works/gaze_thumbnail.jpg" alt="gaze-move-time" />
+  <a href="/works/gazemovetime.html" target="_self">
+    <div class="overlay">
+      <div class="text">gaze-move-time<br/>2022</div>
+    </div>
+  </a>
+      <div class="work-thumbnail">
+  <img src="/works/noise_thumbnail.jpg" alt="noisegram" />
+  <a href="/works/noisegram.html" target="_self">
+    <div class="overlay">
+      <div class="text">noisegram<br/>2022</div>
+    </div>
+  </a>
+      <div class="work-thumbnail">
+  <img src="/works/frank_thumbnail.jpg" alt="Frankenstein" />
+  <a href="/works/frankenstein.html" target="_self">
+    <div class="overlay">
+      <div class="text">Frankenstein : A Hymn to All Humankind [SAKE REMIX]<br/>2021</div>
+    </div>
+  </a>
+      <div class="work-thumbnail">
+  <img src="/works/eom_thumbnail.jpg" alt="Electric Opera Mirror" />
+  <a href="/works/electricoperamirror.html" target="_self">
+    <div class="overlay">
+      <div class="text">Electric Opera Mirror<br/>2021</div>
+    </div>
+  </a>
+      <div class="work-thumbnail">
+  <img src="/works/mindgenerator_thumbnail.jpg" alt="Mind Generator" />
+  <a href="/works/mindgenerator.html" target="_self">
+    <div class="overlay">
+      <div class="text">Mind Generator<br/>2021</div>
+    </div>
+  </a>
     <div class="work-thumbnail">
 <img src="/works/freeinternetexplorer_thumbnail.jpg" alt="Free Internet Explorer" />
 <a href="/works/freeinternetexplorer.html" target="_self">
