--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
     <h2> Undergraduate at Art &amp; Technology in Sogang Univ.</h2>
     <h3> Media Artist</h3>
     <h3> Game Director</h3>
-    <div id="about-text">&nbsp;&nbsp;Jongmin Jung is a undergraduate student majoring in Art &amp; Technology at Sogang University in South Korea. He is studying in media arts, sound design, game making, filmmaking, physical computing and so on. Recently he is working on VR works and video arts.</div>
+    <div id="about-text">&nbsp;&nbsp;Jongmin Jung is a undergraduate student majoring in Art &amp; Technology at Sogang University in South Korea. He is studying in media arts, sound design, game making, filmmaking, physical computing and so on. Recently he is working on Deep Learning for music and audio.</div>
     </div>
   </div>
   <div id="mainfooter">
