--- a/works/electricoperamirror.html
+++ b/works/electricoperamirror.html
@@ -52,7 +52,7 @@
     <h2>2021</h2>
     <h2>Physical Computing</h2>
     <div id="video">
-      <iframe width="100%" height="100%" src="https://youtu.be/57IzNDzXHzs" frameborder="0" allowfullscreen></iframe>
+      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/57IzNDzXHzs" frameborder="0" allowfullscreen></iframe>
     </div>
     <div id="description">
       <br>Made with Arduino Mega, Unreal Engine 4, MetaHuman Creator, OpenFrameworks. Using CV communication.
