--- a/works/frankenstein.html
+++ b/works/frankenstein.html
@@ -52,7 +52,7 @@
     <h2>2021</h2>
     <h2>Single Channel Video</h2>
     <div id="video">
-      <iframe width="100%" height="100%" src="https://youtu.be/YjZwco_iQ8A" frameborder="0" allowfullscreen></iframe>
+      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/YjZwco_iQ8A" frameborder="0" allowfullscreen></iframe>
     </div>
     <div id="description">
       <br>In 2050, mankinds succeeded to digitally simulate the human brain. Almost every labor has replaced with the robots with electric brain.
