--- a/works/gazemovetime.html
+++ b/works/gazemovetime.html
@@ -52,7 +52,7 @@
     <h2>2022</h2>
     <h2>Single Channel Video</h2>
     <div id="video">
-      <iframe width="100%" height="100%" src="https://youtu.be/_S8xci0HUbM" frameborder="0" allowfullscreen></iframe>
+      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/_S8xci0HUbM" frameborder="0" allowfullscreen></iframe>
     </div>
     <div id="description">
       <br>When a person looks at a still image, the person perceives the optic image at once. But this is just the beginning of perception, perceiving the whole image, optically. After that, the person starts taking a look of a part of the image. The person's gaze stay on that part, and then the next part, on and on. On some parts the gaze stays longer, on the other parts the gaze stays shortly. The movement of gaze is occuring in the time dimension. And the sequence of parts of the image which comes in the person's sight one by one is like 'cinema'. Although the image is still, with the movement of gaze, the image tells something in the time dimension. The photograph captured a single moment as the form of still image. Everything is stopped in it. But with the time outside the image, and with the movement of the viewer's eyes, a moment of a single photograph expands to a new timeline. This work fixes the movement of gaze on the photograph. In the video, the movement of gaze and staying time are both fixed. In the pdf slides, the movement of gaze is limited/fixed by the selection of the parts of the whole photograph image and by the arrangement of the parts.
