--- a/works/noisegram.html
+++ b/works/noisegram.html
@@ -52,7 +52,7 @@
     <h2>2022</h2>
     <h2>Visual Sonification</h2>
     <div id="video">
-      <iframe width="100%" height="100%" src="https://youtu.be/H_boU4WRlzw" frameborder="0" allowfullscreen></iframe>
+      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/H_boU4WRlzw" frameborder="0" allowfullscreen></iframe>
     </div>
     <div id="description">
       <br>Used various iPhone cameras.
