--- a/works/5dra.html
+++ b/works/5dra.html
@@ -53,7 +53,7 @@
     <h2>Audio-Visual Compilation Series</h2>
     <h3>With Dongmin Kim and <a href="http://jtoda.one">Jaewon Choi</a></h3>
     <div id="video">
-      <iframe width="100%" height="100%" src="https://youtu.be/oJFSDWx0SXE" frameborder="0" allowfullscreen></iframe>
+      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/oJFSDWx0SXE" frameborder="0" allowfullscreen></iframe>
     </div>
     <div id="description">
       <br><br>
