--- a/works.html
+++ b/works.html
@@ -50,7 +50,7 @@
 
   </div>
   <div class="page-wrapper">
-      </div><div class="work-thumbnail">
+      <div class="work-thumbnail">
   <img src="/works/5dra_thumbnail.png" alt="5D라 Radio" />
   <a href="/works/5dra.html" target="_self">
     <div class="overlay">
