--- a/festivaluniv2022.html
+++ b/festivaluniv2022.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <title>sakemin</title>
-  <link rel="stylesheet" href="pormoku.css">
+  <link rel="stylesheet" href="fest.css">
   <link rel="icon" href="/favicon.png" sizes="96x96">
   <script src="/sketch.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Raleway|Ubuntu" rel="stylesheet">
