--- a/festivaluniv2022.html
+++ b/festivaluniv2022.html
@@ -54,6 +54,7 @@
     </div>
     <div id="description">
       <br>
+      The video might have error yet. Will be updated soon before the deadline.
     </div>
   </div>
 
