--- a/festivaluniv2022.html
+++ b/festivaluniv2022.html
@@ -50,11 +50,11 @@
   <div class="page-wrapper">
     <h1>Festival University 2022</h1>
     <div id="video">
-      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/" frameborder="0" allowfullscreen></iframe>
+      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Fky2ZPuFAoM" frameborder="0" allowfullscreen></iframe>
     </div>
     <div id="description">
       <br>
-      The video might have error yet. Will be updated soon before the deadline.
+      Used Word2Vec to find the relationships of the words about 'Climate Change' with the words used on the Internet.
     </div>
   </div>
 
