--- a/works/5dra.html
+++ b/works/5dra.html
@@ -57,6 +57,13 @@
     </div>
     <div id="description">
       <br>
+      Produced, Directed by Jongmin Jung<br>
+      Graphic Design by Jongmin Jung<br>
+      Interior Design by Jongmin Jung<br>
+      Character Design by Jongmin Jung<br>
+      Sound and Music by Jongmin Jung, Jaewon Choi, Dongmin Kim<br>
+      Drawing by Dongmin Kim<br>
+      Deep Learning (AutoEncoder) by Jongmin Jung<br>
     </div>
   </div>
 
