--- a/festivaluniv2022.html
+++ b/festivaluniv2022.html
@@ -48,13 +48,14 @@
   </div>
 
   <div class="page-wrapper">
-    <h1>Festival University 2022</h1>
+    <h1>Festival University 2022 - Jongmin Jung</h1>
     <div id="video">
       <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Fky2ZPuFAoM" frameborder="0" allowfullscreen></iframe>
     </div>
     <div id="description">
       <br>
-      Used Word2Vec to find the relationships of the words about 'Climate Change' with the words used on the Internet.
+      Used Word2Vec to find the relationships of the words about 'Climate Change' with the words used on the Internet.<br/>
+      LANGUAGE SHAPES PEOPLE.
     </div>
   </div>
 
