--- a/festivaluniv2022.html
+++ b/festivaluniv2022.html
@@ -53,9 +53,10 @@
       <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Fky2ZPuFAoM" frameborder="0" allowfullscreen></iframe>
     </div>
     <div id="description">
-      <br>
+      <br><br>
+          LANGUAGE SHAPES PEOPLE.<br/><br>
       Used Word2Vec to find the relationships of the words about 'Climate Change' with the words used on the Internet.<br/>
-      LANGUAGE SHAPES PEOPLE.
+      
     </div>
   </div>
 
