copyright year scripted, shrmi added, about desc

--- a/about.html
+++ b/about.html
@@ -51,12 +51,12 @@
       <img src="profile.jpg" slt"profile" id="profile" align="right"/>
     <h1>Jongmin "sakemin" Jung</h1>
     <h1 lang="ko">정종민</h1>
-    <h2> 1 April, 1997</h2>
     <h2> Seoul, Republic of Korea</h2>
-    <h2> Undergraduate at Art &amp; Technology in Sogang Univ.</h2>
-    <h3> Media Artist</h3>
-    <h3> Game Director</h3>
-    <div id="about-text">&nbsp;&nbsp;Jongmin Jung is a undergraduate student majoring in Art &amp; Technology at Sogang University in South Korea. He is studying in media arts, sound design, game making, filmmaking, physical computing and so on. Recently he is working on Deep Learning for music and audio.</div>
+    <h2> Bachelor of Art & Science @ Art &amp; Technology in Sogang Univ. 2022</h2>
+    <h3> ML & DL Researcher</h3>
+    <h3> Media Technologist</h3>
+    <h3> Artist</h3>
+    <div id="about-text">&nbsp;&nbsp;Jongmin Sake Jung curates the confusing aspect of the contemporary world, under the agenda of real/fake along the advance of the technology.</div>
     </div>
   </div>
   <div id="mainfooter">
@@ -65,7 +65,7 @@
     <br/>
     Jongmin <a href="index.html">'sakemin'</a> Jung<br/><br/>
     Art &amp; Technology at Sogang Univ.<br/><br/>
-    ⓒ 2017. sakemin all rights reserved.
+    ⓒ <script>document.write(new Date().getFullYear())</script>. sakemin all rights reserved.
   </div>
 </body>
 </html>
