--- a/works.html
+++ b/works.html
@@ -51,6 +51,13 @@
   </div>
   <div class="page-wrapper">
       <div class="work-thumbnail">
+  <img src="/works/shrmi_0.jpeg" alt="SHRMI" />
+  <a href="/works/shrmi.html" target="_self">
+    <div class="overlay">
+      <div class="text">SHRMI<br/>2022</div>
+    </div>
+  </a>
+    </div><div class="work-thumbnail">
   <img src="/works/5dra_thumbnail.png" alt="5D라 Radio" />
   <a href="/works/5dra.html" target="_self">
     <div class="overlay">
@@ -266,7 +273,7 @@
   <div id="mainfooter">
     <br/>
     <br/>
-    <br/> Jongmin <a href="index.html">'sakemin'</a> Jung<br/><br/> Art &amp; Technology at Sogang Univ.<br/><br/> ⓒ 2017. sakemin all rights reserved.<br/><br/><a href="/works/gyroid.html">띠용</a>
+    <br/> Jongmin <a href="index.html">'sakemin'</a> Jung<br/><br/> Art &amp; Technology at Sogang Univ.<br/><br/> ⓒ <script>document.write(new Date().getFullYear())</script>. sakemin all rights reserved.<br/><br/><a href="/works/gyroid.html">띠용</a>
   </div>
 </body>
 
