--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,7 @@
   <div id="mainfooter">
     <br/>
     <br/>
-    <br/> Jongmin <a href="index.html">'sakemin'</a> Jung<br/><br/> Art &amp; Technology at Sogang Univ.<br/><br/> ⓒ 2017. sakemin all rights reserved.
+    <br/> Jongmin <a href="index.html">'sakemin'</a> Jung<br/><br/> Art &amp; Technology at Sogang Univ.<br/><br/> ⓒ <script>document.write(new Date().getFullYear())</script>. sakemin all rights reserved.
   </div>
 </body>
 
