--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <br/>
       Jongmin <a href="index.html">'sakemin'</a> Jung<br/><br/>
       Art &amp; Technology at Sogang Univ.<br/><br/>
-      ⓒ 2017. sakemin all rights reserved.
+      ⓒ <script>document.write(new Date().getFullYear())</script>. sakemin all rights reserved.
     </div>
   </div>
 </body>
