--- a/works/object.html
+++ b/works/object.html
@@ -87,7 +87,7 @@ People struggle to keep distance between themselves and the minority by calling 
   <div id="mainfooter">
     <br/>
     <br/>
-    <br/> Jongmin <a href="/index.html">'sakemin'</a> Jung<br/><br/> Art &amp; Technology at Sogang Univ.<br/><br/> ⓒ 2017. sakemin all rights reserved.<br/><br/>
+    <br/> Jongmin <a href="/index.html">'sakemin'</a> Jung<br/><br/> Art &amp; Technology at Sogang Univ.<br/><br/> ⓒ <script>document.write(new Date().getFullYear())</script>. sakemin all rights reserved.<br/><br/>
   </div>
 </body>
 
