bungee, jta2 added

--- a/works.html
+++ b/works.html
@@ -50,7 +50,21 @@
 
   </div>
   <div class="page-wrapper">
-      <div class="work-thumbnail">
+    <div class="work-thumbnail">
+      <img src="/works/bungee_thumbnail.jpg" alt="DRD - Bungee" />
+      <a href="/works/bungee.html" target="_self">
+        <div class="overlay">
+          <div class="text">DRD - Bungee [Music Video]<br/>2023</div>
+        </div>
+      </a>
+        </div><div class="work-thumbnail">
+  <img src="/works/jta2_thumbnail.png" alt="AI X TATTOO : JTA2" />
+  <a href="/works/jta2.html" target="_self">
+    <div class="overlay">
+      <div class="text">AI X TATTOO : JTA2<br/>2022</div>
+    </div>
+  </a>
+    </div><div class="work-thumbnail">
   <img src="/works/shrmi_0.jpeg" alt="SHRMI" />
   <a href="/works/shrmi.html" target="_self">
     <div class="overlay">
