--- a/works/shrmi.html
+++ b/works/shrmi.html
@@ -56,7 +56,7 @@
       <img src="shrmi_1.jpeg" style="width:100%;"/><br/><br/>
       <img src="shrmi_2.jpeg" style="width:100%;"/><br/><br/>
     <div id="description">
-      <h2>><a href="https://www.instagram.com/shroomdiffusion/">https://www.instagram.com/shroomdiffusion/</a></h2>
+      <h2><a href="https://www.instagram.com/shroomdiffusion/">https://www.instagram.com/shroomdiffusion/</a></h2>
       <br>
       <h3>METAVERSE, SNS & PET PROFILES</h3>
       The term "metaverse" is mainly used to refer to an immersive 3D world. In virtual worlds and metaverses, users interact with each other through their virtual avatars. So, what about social media platforms like Instagram? Users curate their profile feeds with posts they want, and record what they are currently doing through ephemeral "Stories." We press the heart button and leave comments on these recorded images, and send direct messages, interacting with others with a sense of identity within the world of Instagram. What are the relationships between individuals in the Instagram world and in real life? In this world, how do personal and interpersonal relationships function? In the hyper-connected society of Instagram, people quickly and easily encounter others' images (which comprise their identity). There is a sense of intimacy between individuals and their images.
