--- a/works/jta2.html
+++ b/works/jta2.html
@@ -53,7 +53,7 @@
     <h2>AI Generated Tattoo Flashes</h2>
     <h3>Generated with a Fine-tuned Stable Diffusion Model</h3>
     <div id="video">
-      <video width="100%" height="auto" controls autoplay>
+      <video width="100%" padding-top="100%" controls autoplay>
         <source src="jta2.mp4" type="video/mp4">
       </video>
     </div>
