--- a/works/jta2.html
+++ b/works/jta2.html
@@ -52,7 +52,7 @@
     <h2>2022</h2>
     <h2>AI Generated Tattoo Flashes</h2>
     <h3>Generated with a Fine-tuned Stable Diffusion Model</h3>
-    <div id="video" style="width:100%; padding-top:100%;">
+    <div id="video">
       <video style="width:100%; padding-top:100%;" controls autoplay>
         <source src="jta2.mp4" type="video/mp4">
       </video>
