--- a/works/jta2.html
+++ b/works/jta2.html
@@ -52,10 +52,12 @@
     <h2>2022</h2>
     <h2>AI Generated Tattoo Flashes</h2>
     <h3>Generated with a Fine-tuned Stable Diffusion Model</h3>
-    <div id="video">
-      <video style="width:100%; aspect-ratio: 1 / 1;" controls autoplay>
-        <source src="jta2.mp4" type="video/mp4">
-      </video>
+    <div id="video" style="width: 100%; position: relative;">
+      <div style="width: 100%; padding-top: 100%;">
+        <video style="width:100%; aspect-ratio: 1 / 1;" controls autoplay>
+          <source src="jta2.mp4" type="video/mp4">
+        </video>
+      </div>
     </div>
     <div id="description">
       <br> <br>
