jta2 image seq change

--- a/works/jta2.html
+++ b/works/jta2.html
@@ -61,10 +61,10 @@
     </div>
     <div id="description">
       <br> <br>
-      <img src="jta2_2.png" style="width:100%;"/><br/><br/>
-      Sakemin collaborates with tattoo artist JTA2 to use 70 of JTA2's tattoo flashes(images below) as a dataset for fine-tuning the Stable Diffusion model. During the training, they trained the tattoo flashes with the prompt "a drawing of jta2", and when the AI model finished training, they gave the model the keyword "jta2" and commanded it to generate images. The generated images are above this paragraph.
-      <br> <br>
       <img src="jta2_1.png" style="width:100%;"/><br/><br/>
+      Sakemin collaborates with tattoo artist JTA2 to use 70 of JTA2's tattoo flashes(images above) as a dataset for fine-tuning the Stable Diffusion model. During the training, they trained the tattoo flashes with the prompt "a drawing of jta2", and when the AI model finished training, they gave the model the keyword "jta2" and commanded it to generate images. The images below are the generated images from the fine-tuned model.
+      <br> <br>
+      <img src="jta2_2.png" style="width:100%;"/><br/><br/>
       JTA2's IG Profile : <a href="https://www.instagram.com/j.ta.2/">https://www.instagram.com/j.ta.2/</a>
       <br><br>
       Afterwards, Sakemin passed on his AI knowledge to JTA2 and established an AI collaboration system for him. JTA2 continues to apply and develop his work using AI, and has begun creating concept art for jewelry, accessories, and other works that embody his style, in addition to his tattoo flashes.<br>
