--- a/contact.html
+++ b/contact.html
@@ -34,10 +34,8 @@
           </a>
       </li>
       <div id="iconbar">
-        <a href="http://www.facebook.com/uhheung" target="_blank"><img src="facebook.png" alt="facebook" id="facebook" class="icon"/></a>
         <a href="https://www.instagram.com/sake_min/" target="_blank"><img src="instagram.png" alt="instagram" id="instagram" class="icon"/></a>
         <a href="https://soundcloud.com/sakemin" target="_blank"><img src="soundcloud.png" alt="soundcloud" id="soundcloud" class="icon"/></a>
-        <a href="https://sakemin.imgur.com/" target="_blank"><img src="imgur.png" alt="imgur" id="imgur" class="icon"/></a>
       </div>
     </ul>
   </nav>
@@ -53,15 +51,16 @@
       <h1 lang="ko">정종민</h1>
       <table>
         <tr>
-          <caption class="tablecap">Undergraduate at <a href="http://creative.sogang.ac.kr" target="_blank">Art &amp; Technology</a> in <a href="http://www.sogang.ac.kr" target="_blank">Sogang Univ.</a></caption>
+          <caption class="tablecap">Master of Engineering at Artificial Intelligence Department in <a href="http://www.sogang.ac.kr" target="_blank">Sogang Univ. 2025</a></caption>
+          <caption class="tablecap">Bachelor of Art & Science at <a href="http://creative.sogang.ac.kr" target="_blank">Art &amp; Technology</a> in <a href="http://www.sogang.ac.kr" target="_blank">Sogang Univ. 2022</a></caption>
         </tr>
           <tr>
             <td class="table-category">E-mail</td>
-            <td><a href="mailto:bobo7806@naver.com" target="_blank">bobo7806@naver.com</a> / <a href="mailto:bobo7806@gmail.com" target="_blank">bobo7806@gmail.com</a></td>
-          </tr>
+            <td><a href="mailto:sakemin.jung@gmail.com" target="_blank">sakemin.jung@gmail.com</a></td>
+          </tr
           <tr>
-            <td class="table-category">Facebook</td>
-            <td><a href="http://facebook.com/uhheung" target="_blank">http://facebook.com/uhheung</a></td>
+            <td class="table-category">LinkedIn&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><a href="https://www.linkedin.com/in/sake-min/" target="_blank">sake-min</a></td>
           </tr>
           <tr>
             <td class="table-category">Instagram</td>
@@ -70,14 +69,6 @@
           <tr>
             <td class="table-category">Soundcloud&nbsp;&nbsp;&nbsp;&nbsp;</td>
             <td><a href="http://soundcloud.com/sakemin" target="_blank">sakemin</a></td>
-          </tr>
-          <tr>
-            <td class="table-category">Imgur&nbsp;&nbsp;&nbsp;&nbsp;</td>
-            <td><a href="https://sakemin.imgur.com" target="_blank">sakemin</a></td>
-          </tr>
-          <tr>
-            <td class="table-category">Kakao ID</td>
-            <td>bobo7806</td>
           </tr>
       </table>
     </div>
