--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,7 @@
           </a>
       </li>
       <div id="iconbar">
+        <a href="https://www.linkedin.com/in/sake-min/" target="_blank"><img src="linkedin.png" alt="linkedin.png" id="linkedin.png" class="icon"/></a>
         <a href="https://www.instagram.com/sake_min/" target="_blank"><img src="instagram.png" alt="instagram" id="instagram" class="icon"/></a>
         <a href="https://soundcloud.com/sakemin" target="_blank"><img src="soundcloud.png" alt="soundcloud" id="soundcloud" class="icon"/></a>
       </div>
