--- a/about.html
+++ b/about.html
@@ -33,10 +33,9 @@
           </a>
         </li>
         <div id="iconbar"><!--4 icons-->
-          <a href="http://www.facebook.com/uhheung" target="_blank"><img src="facebook.png" alt="facebook" id="facebook" class="icon"/></a>
+          <a href="https://www.linkedin.com/in/sake-min/" target="_blank"><img src="linkedin.png" alt="linkedin.png" id="linkedin.png" class="icon"/></a>
           <a href="https://www.instagram.com/sake_min/" target="_blank"><img src="instagram.png" alt="instagram" id="instagram" class="icon"/></a>
           <a href="https://soundcloud.com/sakemin" target="_blank"><img src="soundcloud.png" alt="soundcloud" id="soundcloud" class="icon"/></a>
-          <a href="https://sakemin.imgur.com/" target="_blank"><img src="imgur.png" alt="imgur" id="imgur" class="icon"/></a>
         </div>
       </ul>
     </nav>
@@ -52,6 +51,7 @@
     <h1>Jongmin "sakemin" Jung</h1>
     <h1 lang="ko">정종민</h1>
     <h2> Seoul, Republic of Korea</h2>
+    <h2> Master of Engineering @ MALer Lab of Artificial Intelligence Department in Sogang Univ. 2025</h2>
     <h2> Bachelor of Art & Science @ Art &amp; Technology in Sogang Univ. 2022</h2>
     <h3> ML & DL Researcher</h3>
     <h3> Media Technologist</h3>
