--- a/works.html
+++ b/works.html
@@ -36,10 +36,9 @@
           </a>
       </li>
       <div id="iconbar">
-        <a href="http://www.facebook.com/uhheung" target="_blank"><img src="facebook.png" alt="facebook" id="facebook" class="icon"/></a>
+        <a href="https://www.linkedin.com/in/sake-min/" target="_blank"><img src="linkedin.png" alt="linkedin.png" id="linkedin.png" class="icon"/></a>
         <a href="https://www.instagram.com/sake_min/" target="_blank"><img src="instagram.png" alt="instagram" id="instagram" class="icon"/></a>
         <a href="https://soundcloud.com/sakemin" target="_blank"><img src="soundcloud.png" alt="soundcloud" id="soundcloud" class="icon"/></a>
-        <a href="https://sakemin.imgur.com/" target="_blank"><img src="imgur.png" alt="imgur" id="imgur" class="icon"/></a>
       </div>
     </ul>
   </nav>
