--- a/contact.html
+++ b/contact.html
@@ -52,8 +52,8 @@
       <h1 lang="ko">정종민</h1>
       <table>
         <tr>
-          <caption class="tablecap">Master of Engineering at <a href="https://jdasam.github.io/maler/" target="_blank">MALer Lab</a> of Artificial Intelligence Department in <a href="http://www.sogang.ac.kr" target="_blank">Sogang Univ.</a> 2025</caption>
-          <caption class="tablecap">Bachelor of Art & Science at <a href="http://creative.sogang.ac.kr" target="_blank">Art &amp; Technology</a> in <a href="http://www.sogang.ac.kr" target="_blank">Sogang Univ.</a> 2022</caption>
+          <caption class="tablecap"> - Master of Engineering at <a href="https://jdasam.github.io/maler/" target="_blank">MALer Lab</a> of Artificial Intelligence Department in <a href="http://www.sogang.ac.kr" target="_blank">Sogang Univ.</a> 2025<br></caption>
+          <caption class="tablecap"> - Bachelor of Art & Science at <a href="http://creative.sogang.ac.kr" target="_blank">Art &amp; Technology</a> in <a href="http://www.sogang.ac.kr" target="_blank">Sogang Univ.</a> 2022</caption>
         </tr>
           <tr>
             <td class="table-category">E-mail</td>
