--- a/contact.html
+++ b/contact.html
@@ -68,6 +68,10 @@
             <td><a href="http://instagram.com/sake_min" target="_blank">sake_min</a></td>
           </tr>
           <tr>
+            <td class="table-category">Twitter&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><a href="https://twitter.com/sake_min" target="_blank">sake_min</a></td>
+          </tr>
+          <tr>
             <td class="table-category">Soundcloud&nbsp;&nbsp;&nbsp;&nbsp;</td>
             <td><a href="http://soundcloud.com/sakemin" target="_blank">sakemin</a></td>
           </tr>
