Update Video URL

--- a/works/mindgenerator.html
+++ b/works/mindgenerator.html
@@ -51,7 +51,7 @@
     <h2>2021</h2>
     <h2>Generative Audio Visual Composition</h2>
     <div id="video">
-      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/hp0yaA-eW10" frameborder="0" allowfullscreen></iframe>
+      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/vHTQ4oLiduk" frameborder="0" allowfullscreen></iframe>
     </div>
     <div id="description">
       <br>Human minds always keep changing. Sometimes drastically, sometimes gradually, but always continuously. This program generates the never-ending morphing human mind as audio-visual form. Made with MaxMSP and StyleGAN2.
