--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
     <h1>Jongmin "sakemin" Jung</h1>
     <h1 lang="ko">정종민</h1>
     <h2> Seoul, Republic of Korea</h2>
-    <h2> Master of Engineering @ MALer Lab of Artificial Intelligence Department in Sogang Univ. 2025</h2>
+    <h2> Master of Science @ MALer Lab of Department of Artificial Intelligence in Sogang Univ. 2025</h2>
     <h2> Bachelor of Art & Science @ Art &amp; Technology in Sogang Univ. 2022</h2>
     <h3> ML & DL Researcher</h3>
     <h3> Media Technologist</h3>
