--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <a href="https://www.linkedin.com/in/sake-min/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
                         <a href="https://github.com/sakemin" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
                         <a href="https://scholar.google.com/citations?user=m5-ZZGcAAAAJ&hl=en" target="_blank" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
-                        <a href="cv.pdf" target="_blank" title="Download CV"><i class="fas fa-file-lines"></i></a>
+                        <a href="CV_JongminJung.pdf" target="_blank" title="Download CV"><i class="fas fa-file-lines"></i></a>
                     </nav>
                 </div>
             </div>
