--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header>
             <div class="header-content">
                 <h1>Jongmin Jung</h1>
-                <h1><i>sakemin</i></h1>
+                <h1>정종민 <i>sakemin</i></h1>
                 <div class="subtitle">
                     <span>Music & Audio AI Researcher / Media Technologist</span>
                     <nav class="contact-links">
