--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <div class="item-main">
                     <span class="item-title"><a href="https://arxiv.org/abs/2412.00325" target="_blank">MusicGen-Chord: Advancing Music Generation through Chord Progressions and Interactive Web-UI</a></span>
                     <span class="item-authors"><b>Jongmin Jung</b>, Andreas Jansson, Dasaem Jeong</span>
-                    <span class="item-subtitle">Late-breaking/Demo at the International Society of Music Information Retrieval Conference (ISMIR)</span>
+                    <span class="item-subtitle">Late-breaking/Demo at the 25th International Society of Music Information Retrieval Conference (ISMIR)</span>
                     <div class="item-links">
                         <a href="https://youtu.be/w3e6IpEjqZU" target="_blank" class="link-btn">Demo</a>
                     </div>
@@ -112,7 +112,7 @@
                 <div class="item-main">
                     <span class="item-title"><a href="https://arxiv.org/abs/2408.01180" target="_blank">Nested Music Transformer: Sequentially Decoding Compound Tokens in Symbolic Music and Audio Generation</a></span>
                     <span class="item-authors">Jiwoo Ryu, Hao-Wen Dong, <b>Jongmin Jung</b>, Dasaem Jeong</span>
-                    <span class="item-subtitle">The International Society of Music Information Retrieval Conference (ISMIR)</span>
+                    <span class="item-subtitle">The 25th International Society of Music Information Retrieval Conference (ISMIR)</span>
                 </div>
                   <span class="item-date">2024</span>
               </div>
