--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </section>
 
         <section id="experience">
-          <div class="section-title">Experience</div>
+          <div class="section-title">Experiences</div>
           <div class="section-content">
               <div class="item">
                   <div class="item-main">
