--- a/index.html
+++ b/index.html
@@ -176,6 +176,11 @@
             <div class="section-title">Works</div>
             <div class="section-content">
                 <div class="works-grid">
+                    <div class="work-item" data-title="the fox is still out there, i said" data-year="2026" data-desc="Generative Audio Visual Composition" data-detail="Souvenirs from the latent spaces I've been." data-media-type="youtube" data-media-src="https://www.youtube.com/embed/B77EoJL0-VI?si=fxWJvwsxtXx1JboL">
+                        <img src="works/thefox.png" alt="the fox is still out there, i said"> 
+                        <span class="work-title">the fox is still out there, i said</span>
+                        <span class="work-year">2026</span>
+                    </div>
                     <div class="work-item" data-title="LAV:MG" data-year="2024" data-desc="Generative Audio Visual Composition" data-detail="LAV / MaxMSP with RAVE.</br>StyleGAN2 model trained by <a href='https://krrrl.blogspot.com/' target='_blank'>Krrrl</a>." data-media-type="youtube" data-media-src="https://www.youtube.com/embed/Ag7jrmCl59o?si=sw6eoQsvVtev1D4-">
                         <img src="works/LAV-fig.png" alt="LAV:MG">
                         <span class="work-title">LAV:MG</span>
