--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             <div class="section-title">Works</div>
             <div class="section-content">
                 <div class="works-grid">
-                    <div class="work-item" data-title="the fox is still out there, i said" data-year="2026" data-desc="Generative Audio Visual Composition" data-detail="Souvenirs from the latent spaces I've been." data-media-type="youtube" data-media-src="https://www.youtube.com/embed/B77EoJL0-VI?si=fxWJvwsxtXx1JboL">
+                    <div class="work-item" data-title="the fox is still out there, i said" data-year="2026" data-desc="Generative Audio Visual Composition" data-detail="Souvenirs from the latent spaces I've been in." data-media-type="youtube" data-media-src="https://www.youtube.com/embed/B77EoJL0-VI?si=fxWJvwsxtXx1JboL">
                         <img src="works/thefox.png" alt="the fox is still out there, i said"> 
                         <span class="work-title">the fox is still out there, i said</span>
                         <span class="work-year">2026</span>
