--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                         <span class="work-title">LAV:MG</span>
                         <span class="work-year">2024</span>
                     </div>
-                    <div class="work-item" data-title="noisegram" data-year="2022" data-desc="Image Sonification" data-detail="Turning visual noise into soundscapes." data-media-type="youtube" data-media-src="https://www.youtube.com/embed/H_boU4WRlzw">
+                    <div class="work-item" data-title="noisegram" data-year="2022" data-desc="Image Sonification" data-detail="Turning visual noises into soundscapes." data-media-type="youtube" data-media-src="https://www.youtube.com/embed/H_boU4WRlzw">
                         <img src="works/noise_thumbnail.jpg" alt="noisegram">
                         <span class="work-title">noisegram</span>
                         <span class="work-year">2022</span>
