--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                       <span class="item-title">Music AI Researcher</span>
                       <span class="item-subtitle"><a href="https://neutune.com/" target="_blank">Neutune</a></span>
                   </div>
-                  <span class="item-date">2025</span>
+                  <span class="item-date">2025 -</span>
               </div>
               <div class="item">
                   <div class="item-main">
